# Nova

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  README.md
notebooks/: 01_NOVA_Quickstart.ipynb  02_FITS_to_NOVA_Migration.ipynb  03_Performance_Benchmarks.ipynb  04_Real_Astronomical_Data.ipynb  05_Math_and_Visualization_Tools.ipynb
nova-py/: pyproject.toml
nova-py/examples/: fits_to_nova.py
nova-py/nova/: __init__.py  adapters.py  astrometry.py  benchmarks.py  catalog.py  cli.py  constants.py  container.py  coords.py  fast_io.py  fits_converter.py  image_processing.py  integrity.py  math.py  migrate.py  ml.py  operations.py  photometry.py  photometry_pipeline.py  pipeline.py  plots.py  provenance.py  remote.py  spectral.py  spectroscopy_pipeline.py  streaming.py  validation.py  visualization.py  wcs.py
nova-py/tests/: test_audit.py  test_benchmarks.py  test_cli.py  test_container.py  test_fast_io.py  test_fits_converter.py  test_integrity.py  test_math.py  test_ml.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_provenance.py  test_real_images.py  test_validation.py  test_visualization.py  test_wcs.py
nova-py/tutorials/: 01_quickstart.py  02_fits_conversion.py  03_cloud_access.py  04_provenance.py  05_performance.py  06_math_tools.py  07_migration_streaming.py  08_pipeline_framework.py  09_native_operations.py  10_astrometry.py  11_photometry_pipeline.py  12_spectroscopy_pipeline.py
spec/: nova-spec-v0.1.md  nova-spec-v0.2.md  nova-spec-v0.3.md  nova-spec-v1.0.md
(+8 files in other folders)
